--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,11 @@
     "@angular/material": "^20.2.10",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "apollo-angular": "^12.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@apollo/client": "^4.0.1",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular/build": "^20.3.7",
