--- a/PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
+++ b/PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <LangVersion>preview</LangVersion>
@@ -9,13 +9,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BananaCakePop.Middleware" Version="17.0.0"/>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11"/>
-        <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.11"/>
+        <PackageReference Include="BananaCakePop.Middleware" Version="17.0.0" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11" />
+        <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.11" />
         <PackageReference Include="HotChocolate.Types.Analyzers" Version="15.1.11">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="9.6.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PhantomDave.BankTracking.Data\PhantomDave.BankTracking.Data.csproj" />
+      <ProjectReference Include="..\PhantomDave.BankTracking.Library\PhantomDave.BankTracking.Library.csproj" />
     </ItemGroup>
 
 </Project>
