--- a/PhantomDave.BankTracking.Api/appsettings.Development.json
+++ b/PhantomDave.BankTracking.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=bankdb;Username=bankuser;Password=bankpassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
