--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -82,7 +82,13 @@
                 "scripts": true,
                 "styles": true,
                 "vendor": false
-              }
+              },
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
