--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen:watch": "graphql-codegen --config codegen.ts --watch",
+    "schema:download": "graphql-codegen --config codegen.ts",
+    "prestart": "npm run codegen"
   },
   "prettier": {
     "printWidth": 100,
@@ -22,6 +26,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.7",
     "@angular/cdk": "^20.2.10",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
@@ -30,16 +35,23 @@
     "@angular/material": "^20.2.10",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "apollo-angular": "^12.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
     "@apollo/client": "^4.0.1",
-    "graphql": "^16"
+    "apollo-angular": "^12.1.0",
+    "graphql": "^16",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.7",
     "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.0",
+    "@graphql-codegen/cli": "^6.0.1",
+    "@graphql-codegen/introspection": "^5.0.0",
+    "@graphql-codegen/schema-ast": "^5.0.0",
+    "@graphql-codegen/typescript": "^5.0.2",
+    "@graphql-codegen/typescript-apollo-angular": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^5.0.2",
+    "@parcel/watcher": "^2.5.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
