Implement login functionality with JWT authentication and GraphQL integration

--- a/PhantomDave.BankTracking.Api/appsettings.Development.json
+++ b/PhantomDave.BankTracking.Api/appsettings.Development.json
@@ -7,5 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Secret": "dev_secret_change_me_please_and_use_user_secrets_in_prod",
+    "Issuer": "PhantomDave.BankTracking",
+    "Audience": "PhantomDave.BankTracking.Client",
+    "ExpiryMinutes": 60
   }
 }
