--- a/PhantomDave.BankTracking.Api/appsettings.json
+++ b/PhantomDave.BankTracking.Api/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "please_override_in_environment",
+    "Issuer": "PhantomDave.BankTracking",
+    "Audience": "PhantomDave.BankTracking.Client",
+    "ExpiryMinutes": 60
+  }
 }
