--- a/PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
+++ b/PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
@@ -11,11 +11,13 @@
     <ItemGroup>
         <PackageReference Include="BananaCakePop.Middleware" Version="17.0.0" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11" />
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="15.1.11" />
         <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.11" />
         <PackageReference Include="HotChocolate.Types.Analyzers" Version="15.1.11">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="HotChocolate.Authorization" Version="15.1.11" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="9.6.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
