--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,9 @@
     "@angular/router": "^20.3.0",
     "@apollo/client": "^4.0.1",
     "apollo-angular": "^12.1.0",
+    "eslint": "^9.39.0",
     "graphql": "^16",
+    "prettier": "^3.6.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
