--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,5 +25,5 @@
     }
   },
   "updateContentCommand": "dotnet build ./PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj || true",
-  "postStartCommand": "echo 'Devcontainer ready. You can run: dotnet run --project PhantomDave.BankTracking.Api & and npm start --prefix frontend'"
+  "postStartCommand": "docker compose up database -d && echo 'Devcontainer ready. You can run: dotnet run --project PhantomDave.BankTracking.Api & and npm start --prefix frontend'"
 }
