feat: Improve API startup checks and logging in frontend workflow

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -47,26 +47,24 @@ jobs:
     - name: Start API in background
       working-directory: ./PhantomDave.BankTracking.Api
       run: |
-        dotnet run &
+        dotnet run > api.log 2>&1 &
         echo $! > api.pid
       env:
         ASPNETCORE_ENVIRONMENT: Development
 
     - name: Wait for API to be ready
+      uses: jtalk/url-health-check-action@v4
+      with:
+        url: http://localhost:5000/graphql
+        max-attempts: 15
+        retry-delay: 2s
+
+    - name: Show API logs on failure
+      if: failure()
+      working-directory: ./PhantomDave.BankTracking.Api
       run: |
-        echo "Waiting for API to start..."
-        max_attempts=30
-        attempt=0
-        until curl -sf http://localhost:5000/graphql > /dev/null 2>&1 || [ $attempt -eq $max_attempts ]; do
-          echo "Attempt $((attempt + 1))/$max_attempts: API not ready yet..."
-          sleep 2
-          attempt=$((attempt + 1))
-        done
-        if [ $attempt -eq $max_attempts ]; then
-          echo "API failed to start within timeout"
-          exit 1
-        fi
-        echo "API is ready!"
+        echo "=== API Logs ==="
+        cat api.log || echo "No log file found"
 
     - name: Generate GraphQL types
       working-directory: ./frontend
