--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
-﻿FROM node:24
+﻿# Build stage
+FROM node:24 AS build
 
 WORKDIR /app
 
@@ -8,6 +9,18 @@ RUN npm ci
 
 COPY . .
 
-EXPOSE 4200
+# Build for production
+RUN npm run build -- --configuration production
 
-CMD ["npm", "run", "start", "--", "--host", "0.0.0.0"]
+# Production stage
+FROM nginx:alpine AS final
+
+# Copy built files to nginx
+COPY --from=build /app/dist/frontend /usr/share/nginx/html
+
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
