--- a/.github/workflows/deploy-tailscale.yml
+++ b/.github/workflows/deploy-tailscale.yml
@@ -84,7 +84,11 @@ jobs:
       - name: Deploy with Docker Compose
         run: |
           echo "🚀 Starting deployment..."
-          tailscale ssh "${{ steps.prepare.outputs.target }}" "cd $DEPLOY_DIR && docker compose down && docker compose up -d --build --wait"
+          echo "📦 Building and starting database and backend first..."
+          tailscale ssh "${{ steps.prepare.outputs.target }}" "cd $DEPLOY_DIR && docker compose down && docker compose up -d --build --wait database backend"
+          echo "✅ Backend is ready"
+          echo "📦 Building and starting frontend..."
+          tailscale ssh "${{ steps.prepare.outputs.target }}" "cd $DEPLOY_DIR && docker compose up -d --build --wait frontend"
           echo "✅ Deployment completed"
 
       - name: Post-deployment verification
