feat: Implement balance tracking feature with new components and services

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,19 @@
       "database": "bankdb",
       "username": "bankuser"
     }
+  ],
+  "cSpell.words": [
+    "appsettings",
+    "aspnet",
+    "ASPNETCORE",
+    "bankdb",
+    "bankpassword",
+    "banktracking",
+    "banktrackingapplication",
+    "banktrackingfrontend",
+    "bankuser",
+    "codegen",
+    "healthcheck",
+    "isready"
   ]
 }
