Formatted and added Settings Component

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,8 +18,16 @@
         "ms-dotnettools.csharp",
         "ms-azuretools.vscode-docker",
         "graphql.vscode-graphql",
+        "graphql.vscode-graphql-syntax",
         "Angular.ng-template",
         "esbenp.prettier-vscode",
+        "rvest.vs-code-prettier-eslint",
+        "dbaeumer.vscode-eslint",
+        "christian-kohler.npm-intellisense",
+        "christian-kohler.path-intellisense",
+        "redhat.vscode-yaml",
+        "github.vscode-github-actions",
+        "EditorConfig.EditorConfig",
         "streetsidesoftware.code-spell-checker"
       ]
     }
