--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "codegen": "graphql-codegen --config codegen.ts",
     "codegen:watch": "graphql-codegen --config codegen.ts --watch",
     "schema:download": "graphql-codegen --config codegen.ts",
-    "prestart": "npm run codegen"
+    "prestart": "npm run codegen",
+    "lint": "eslint \"src/**/*.{ts,js,html}\" --ext .ts,.js,.html --max-warnings=0",
+    "lint:fix": "eslint \"src/**/*.{ts,js,html}\" --ext .ts,.js,.html --fix",
+    "format": "prettier --write \"**/*.{ts,js,html,css,scss,json,md}\""
   },
   "prettier": {
     "printWidth": 100,
@@ -26,27 +29,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.7",
-    "@angular/cdk": "^20.2.10",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/material": "^20.2.10",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
-    "@apollo/client": "^4.0.1",
+    "@angular/animations": "^20.3.10",
+    "@angular/cdk": "^20.2.12",
+    "@angular/common": "^20.3.10",
+    "@angular/compiler": "^20.3.10",
+    "@angular/core": "^20.3.10",
+    "@angular/forms": "^20.3.10",
+    "@angular/material": "^20.2.12",
+    "@angular/platform-browser": "^20.3.10",
+    "@angular/router": "^20.3.10",
+    "@apollo/client": "^4.0.9",
     "apollo-angular": "^12.1.0",
-    "eslint": "^9.39.0",
-    "graphql": "^16",
+    "eslint": "^9.39.1",
+    "graphql": "^16.12.0",
     "prettier": "^3.6.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.7",
-    "@angular/cli": "^20.3.7",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular/build": "^20.3.9",
+    "@angular/cli": "^20.3.9",
+    "@angular/compiler-cli": "^20.3.10",
+    "@angular-eslint/builder": "^20.6.0",
+    "@angular-eslint/eslint-plugin": "^20.6.0",
+    "@angular-eslint/eslint-plugin-template": "^20.6.0",
+    "@angular-eslint/template-parser": "^20.6.0",
     "@graphql-codegen/cli": "^6.0.1",
     "@graphql-codegen/introspection": "^5.0.0",
     "@graphql-codegen/schema-ast": "^5.0.0",
@@ -54,13 +61,17 @@
     "@graphql-codegen/typescript-apollo-angular": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^5.0.2",
     "@parcel/watcher": "^2.5.1",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
+    "@types/jasmine": "~5.1.12",
+    "jasmine-core": "~5.12.1",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.3",
+    "@typescript-eslint/parser": "^8.46.4",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4"
   }
 }
