--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,8 @@
     "@angular-eslint/eslint-plugin": "^20.6.0",
     "@angular-eslint/eslint-plugin-template": "^20.6.0",
     "@angular-eslint/template-parser": "^20.6.0",
+  "@eslint/eslintrc": "^3.1.0",
+  "@eslint/js": "^9.11.1",
     "@graphql-codegen/cli": "^6.0.1",
     "@graphql-codegen/introspection": "^5.0.0",
     "@graphql-codegen/schema-ast": "^5.0.0",
