feat: Add file import functionality with CSV and Excel support
- Introduced FileImportService to handle file parsing for CSV and Excel formats.
- Implemented ColumnDetectionService for detecting column headers and mapping them to standardized field names.
- Added GraphQL mutations for previewing and confirming imports, including input types for import templates and preview data.
- Created BankImportTemplate model and corresponding database migrations to store import templates.
- Updated application settings to configure EPPlus for Excel file handling.
- Enhanced CORS policy to allow additional origins for development.
- Added necessary GraphQL types and inputs for handling import operations.

--- a/PhantomDave.BankTracking.Api/appsettings.json
+++ b/PhantomDave.BankTracking.Api/appsettings.json
@@ -14,5 +14,10 @@
     "Issuer": "PhantomDave.BankTracking",
     "Audience": "PhantomDave.BankTracking.Client",
     "ExpiryMinutes": 60
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
   }
 }
