--- a/PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
+++ b/PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="BananaCakePop.Middleware" Version="17.0.0" />
+        <PackageReference Include="CsvHelper" Version="33.1.0" />
+        <PackageReference Include="EPPlus" Version="8.2.1" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11" />
         <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="15.1.11" />
         <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.11" />
