--- a/PhantomDave.BankTracking.Api/appsettings.Development.json
+++ b/PhantomDave.BankTracking.Api/appsettings.Development.json
@@ -13,5 +13,10 @@
     "Issuer": "PhantomDave.BankTracking",
     "Audience": "PhantomDave.BankTracking.Client",
     "ExpiryMinutes": 60
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
   }
 }
