--- a/.github/workflows/deploy-tailscale.yml
+++ b/.github/workflows/deploy-tailscale.yml
@@ -13,9 +13,36 @@ env:
   DEPLOY_DIR: /opt/banktracker/BankTrackerGraphQL
 
 jobs:
-  wait-for-images:
-    name: Wait for Container Images
+  detect-changes:
+    name: Detect Changed Files
     runs-on: ubuntu-latest
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Check for file changes
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'PhantomDave.BankTracking.Api/**'
+              - 'PhantomDave.BankTracking.Data/**'
+              - 'PhantomDave.BankTracking.Library/**'
+              - 'Dockerfile'
+              - '.github/workflows/build-backend-image.yml'
+            frontend:
+              - 'frontend/**'
+              - '.github/workflows/build-frontend-image.yml'
+
+  wait-for-backend:
+    name: Wait for Backend Image
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.backend == 'true'
     permissions:
       actions: read
     steps:
@@ -27,6 +54,14 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
 
+  wait-for-frontend:
+    name: Wait for Frontend Image
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.frontend == 'true'
+    permissions:
+      actions: read
+    steps:
       - name: Wait for frontend image build
         uses: lewagon/wait-on-check-action@v1.3.4
         with:
@@ -38,7 +73,8 @@ jobs:
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: wait-for-images
+    needs: [detect-changes, wait-for-backend, wait-for-frontend]
+    if: always() && !cancelled() && !contains(needs.*.result, 'failure')
     permissions:
       contents: read
       packages: read
