feat(import-wizard): implement multi-step import wizard with file upload, preview, and mapping detection
- Added ImportWizardComponent with stepper navigation for file import.
- Implemented Step1UploadComponent for file selection and validation.
- Created Step2DetectComponent to display detected column mappings and preview data.
- Introduced Step3ConfigureComponent, Step4PreviewComponent, and Step5ConfirmComponent as placeholders for future functionality.
- Enhanced ImportService to handle file validation and import confirmation with detailed error handling.
- Integrated apollo-upload-client for handling file uploads in GraphQL requests.
- Updated app routing to include the new import wizard path.
- Added styles and HTML templates for each step of the import wizard.
- Created debug.xlsx for testing import functionality.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
     "vscode": {
       "extensions": [
         "ms-dotnettools.csharp",
+        "ms-dotnettools.csdevkit",
         "ms-azuretools.vscode-docker",
         "graphql.vscode-graphql",
         "graphql.vscode-graphql-syntax",
