--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "^20.3.10",
     "@apollo/client": "^4.0.9",
     "apollo-angular": "^12.1.0",
+    "apollo-upload-client": "^19.0.0",
     "eslint": "^9.39.1",
     "graphql": "^16.12.0",
     "prettier": "^3.6.2",
@@ -47,13 +48,13 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.9",
-    "@angular/cli": "^20.3.9",
-    "@angular/compiler-cli": "^20.3.10",
     "@angular-eslint/builder": "^20.6.0",
     "@angular-eslint/eslint-plugin": "^20.6.0",
     "@angular-eslint/eslint-plugin-template": "^20.6.0",
     "@angular-eslint/template-parser": "^20.6.0",
+    "@angular/build": "^20.3.9",
+    "@angular/cli": "^20.3.9",
+    "@angular/compiler-cli": "^20.3.10",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.11.1",
     "@graphql-codegen/cli": "^6.0.1",
@@ -64,16 +65,16 @@
     "@graphql-codegen/typescript-operations": "^5.0.2",
     "@parcel/watcher": "^2.5.1",
     "@types/jasmine": "~5.1.12",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jasmine-core": "~5.12.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.3",
-    "@typescript-eslint/parser": "^8.46.4",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4"
+    "typescript": "~5.9.3"
   }
 }
