--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,5 @@
 {
-  "sqltools.connections": [
-    {
-      "ssh": "Disabled",
-      "previewLimit": 50,
-      "server": "localhost",
-      "port": 5432,
-      "driver": "PostgreSQL",
-      "name": "bank",
-      "group": "bank",
-      "database": "bankdb",
-      "username": "bankuser"
-    }
-  ],
+  "sqltools.connections": [],
   "cSpell.words": [
     "appsettings",
     "aspnet",
