feat: add SQL Tools configuration for PostgreSQL database connection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
-  "sqltools.connections": [],
+  "sqltools.connections": [
+    {
+      "ssh": "Disabled",
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 5432,
+      "askForPassword": true,
+      "driver": "PostgreSQL",
+      "name": "bankdb",
+      "group": "banktracker",
+      "username": "bankuser",
+      "database": "bankdb"
+    }
+  ],
   "cSpell.words": [
     "appsettings",
     "aspnet",
