--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,61 +1,65 @@
-name: Tests
+name: Run Project Tests
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v5
+    steps:
+      - uses: actions/checkout@v5
 
-            - name: Setup .NET
-              uses: actions/setup-dotnet@v5
-              with:
-                  dotnet-version: "9.0.x"
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "9.0.x"
 
-            - name: Run Unit Tests
-              run: dotnet test PhantomDave.BankTracking.UnitTests/
+      - name: Run Unit Tests
+        run: dotnet test PhantomDave.BankTracking.UnitTests/
 
-            - name: Run Integration Tests
-              run: dotnet test PhantomDave.BankTracking.IntegrationTests/
+      - name: Run Integration Tests
+        run: dotnet test PhantomDave.BankTracking.IntegrationTests/
 
-            - name: Setup Node
-              uses: actions/setup-node@v6
-              with:
-                  node-version: "20"
-                  cache: 'npm'
-                  cache-dependency-path: frontend/package-lock.json
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
 
-            - name: Install Dependencies
-              working-directory: frontend
-              run: npm ci
+      - name: Install Dependencies
+        working-directory: frontend
+        run: npm ci
 
-            - name: Install Playwright
-              working-directory: frontend
-              run: npx playwright install --with-deps chromium
+      - name: Install Playwright
+        working-directory: frontend
+        run: npx playwright install --with-deps chromium
 
-            - name: Start Database
-              run: docker compose -f compose.dev.yaml up -d database
+      - name: Start Database
+        run: docker compose -f compose.dev.yaml up -d database
 
-            - name: Start Backend API
-              run: |
-                dotnet build PhantomDave.BankTracking.Api/
-                nohup dotnet run --project PhantomDave.BankTracking.Api/ --urls=http://localhost:5095 > api.log 2>&1 &
+      - name: Start Backend API
+        run: |
+          dotnet build PhantomDave.BankTracking.Api/
+          nohup dotnet run --project PhantomDave.BankTracking.Api/ --urls=http://localhost:5095 > api.log 2>&1 &
 
-            - name: Wait for Backend API
-              run: |
-                for i in {1..30}; do
-                  if curl -s http://localhost:5095/graphql > /dev/null; then
-                    echo "API is up!"
-                    exit 0
-                  fi
-                  echo "Waiting for API..."
-                  sleep 2
-                done
-                echo "API did not start in time" >&2
-                exit 1
+      - name: Wait for Backend API
+        run: |
+          for i in {1..30}; do
+            if curl -s http://localhost:5095/graphql > /dev/null; then
+              echo "API is up!"
+              exit 0
+            fi
+            echo "Waiting for API..."
+            sleep 2
+          done
+          echo "API did not start in time" >&2
+          exit 1
 
-            - name: Run E2E Tests
-              working-directory: frontend
-              run: npm run test:e2e
+      - name: Run E2E Tests
+        working-directory: frontend
+        run: npm run test:e2e
