--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,7 @@
     "angular-*": {
       "externalTemplate": true
     }
-  }
+  },
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true
 }
