Added charts with wrapper and use

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
     "bankuser",
     "codegen",
     "healthcheck",
-    "isready"
+    "isready",
+    "xaxis",
+    "yaxis"
   ],
   "dependi.npm.lockFileEnabled": true,
   "angular-schematics.schematicsDefaultOptions": {
