--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,10 +42,12 @@
     "@angular/platform-browser": "^20.3.12",
     "@angular/router": "^20.3.12",
     "@apollo/client": "^4.0.9",
+    "apexcharts": "^5.3.6",
     "apollo-angular": "^12.1.0",
     "apollo-upload-client": "^19.0.0",
     "eslint": "^9.39.1",
     "graphql": "^16.12.0",
+    "ng-apexcharts": "^2.0.3",
     "prettier": "^3.6.2",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
