feat: Implement month-over-month comparison feature
- Added MONTH_COMPARISON_PLAN.md for detailed implementation plan of the new feature.
- Created new GraphQL query and service logic for monthly comparison in the backend.
- Developed frontend components and services to display monthly comparison data.
- Updated routing and navigation to include the new comparison feature.
- Enhanced TODOs with new feature ideas and planning documents.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser": "^20.3.12",
     "@angular/router": "^20.3.12",
     "@apollo/client": "^4.0.9",
+    "angular-gridster2": "^20.2.3",
     "apexcharts": "^5.3.6",
     "apollo-angular": "^12.1.0",
     "apollo-upload-client": "^19.0.0",
