--- a/.github/workflows/build-frontend-image.yml
+++ b/.github/workflows/build-frontend-image.yml
@@ -4,14 +4,17 @@ on:
   push:
     branches: [main]
     paths:
-      - 'frontend/**'
-      - '.github/workflows/build-frontend-image.yml'
+      - "frontend/**"
+      - ".github/workflows/build-frontend-image.yml"
   pull_request:
     branches: [main]
     paths:
-      - 'frontend/**'
-      - '.github/workflows/build-frontend-image.yml'
+      - "frontend/**"
+      - ".github/workflows/build-frontend-image.yml"
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Run Project Tests"]
+    types: [completed]
 
 env:
   REGISTRY: ghcr.io
@@ -31,7 +34,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: "9.0.x"
 
       - name: Restore dependencies
         run: dotnet restore PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
