--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,15 +2,18 @@ name: Frontend - Build and Lint
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend.yml'
+      - "frontend/**"
+      - ".github/workflows/frontend.yml"
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend.yml'
+      - "frontend/**"
+      - ".github/workflows/frontend.yml"
+  workflow_run:
+    workflows: ["Build and Push Backend Image", "Build and Push Frontend Image"]
+    types: [completed]
 
 jobs:
   build-and-lint:
@@ -20,74 +23,74 @@ jobs:
       contents: write
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v5
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v6
-      with:
-        node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
 
-    - name: Install dependencies
-      working-directory: ./frontend
-      run: npm ci
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '9.0.x'
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "9.0.x"
 
-    - name: Restore dependencies
-      run: dotnet restore PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
+      - name: Restore dependencies
+        run: dotnet restore PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj
 
-    - name: Spin up Database with Docker Compose
-      run: docker compose up database -d --wait
+      - name: Spin up Database with Docker Compose
+        run: docker compose up database -d --wait
 
-    - name: Start API in background
-      working-directory: ./PhantomDave.BankTracking.Api
-      run: |
-        dotnet run > api.log 2>&1 &
-        echo $! > api.pid
-      env:
-        ASPNETCORE_ENVIRONMENT: Development
+      - name: Start API in background
+        working-directory: ./PhantomDave.BankTracking.Api
+        run: |
+          dotnet run > api.log 2>&1 &
+          echo $! > api.pid
+        env:
+          ASPNETCORE_ENVIRONMENT: Development
 
-    - name: Wait for API to be ready
-      uses: jtalk/url-health-check-action@v4
-      with:
-        url: http://localhost:5095/graphql
-        max-attempts: 15
-        retry-delay: 2s
+      - name: Wait for API to be ready
+        uses: jtalk/url-health-check-action@v4
+        with:
+          url: http://localhost:5095/graphql
+          max-attempts: 15
+          retry-delay: 2s
 
-    - name: Show API logs on failure
-      if: failure()
-      working-directory: ./PhantomDave.BankTracking.Api
-      run: |
-        echo "=== API Logs ==="
-        cat api.log || echo "No log file found"
+      - name: Show API logs on failure
+        if: failure()
+        working-directory: ./PhantomDave.BankTracking.Api
+        run: |
+          echo "=== API Logs ==="
+          cat api.log || echo "No log file found"
 
-    - name: Generate GraphQL types
-      working-directory: ./frontend
-      run: npm run codegen
+      - name: Generate GraphQL types
+        working-directory: ./frontend
+        run: npm run codegen
 
-    - name: Format code with Prettier
-      working-directory: ./frontend
-      run: npx prettier --write "src/**/*.{ts,html,css,scss}"
+      - name: Format code with Prettier
+        working-directory: ./frontend
+        run: npx prettier --write "src/**/*.{ts,html,css,scss}"
 
-    - name: Commit formatted code
-      uses: stefanzweifel/git-auto-commit-action@v7
-      if: github.event_name == 'push'
-      with:
-        commit_message: 'chore: auto-format Frontend code'
-        file_pattern: 'frontend/src/**'
+      - name: Commit formatted code
+        uses: stefanzweifel/git-auto-commit-action@v7
+        if: github.event_name == 'push'
+        with:
+          commit_message: "chore: auto-format Frontend code"
+          file_pattern: "frontend/src/**"
 
-    - name: Check TypeScript compilation
-      working-directory: ./frontend
-      run: npx tsc --noEmit
+      - name: Check TypeScript compilation
+        working-directory: ./frontend
+        run: npx tsc --noEmit
 
-    - name: Build
-      working-directory: ./frontend
-      run: npm run build -- --configuration=development
+      - name: Build
+        working-directory: ./frontend
+        run: npm run build -- --configuration=development
